--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 description = "A Python package for managing calibration parameters in a SQLite database"
 readme = "README.md"
 requires-python = ">=3.6"
-license = {file = "LICENSE"}
+# license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
 authors = [
-    {name = "Your Name", email = "your.email@example.com"}
+    {name = "Ivan MeL"}
 ]
 keywords = ["calibration", "database", "sqlite", "parameters"]
 classifiers = [
@@ -16,7 +16,7 @@ classifiers = [
 ]
 
 [project.scripts]
-calibrationdb = "calibrationdb.cal_db_cli:main"
+caldb = "calibrationdb.cal_db_cli:main"
 
 [build-system]
 requires = ["setuptools>=61.0", "wheel"]
